# yandex-market-scrapper

./: .gitignore  README.md  pyproject.toml
scrapper_lib/: __main__.py
scrapper_lib/exceptions/: __init__.py  core.py
scrapper_lib/ingestion/: __init__.py
scrapper_lib/model/: __init__.py  catalog.py  table.py
scrapper_lib/processing/: __init__.py  converter.py
tests/model/: test_catalog.py  test_table.py
