[tool.poetry]
name = "ym-scrapper"
version = "0.1.0"
description = ""
authors = ["ShakirzyanovArsen <shokshokshoki@mail.ru>"]
readme = "README.md"
packages = [{include = "scrapper_lib"}]

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.28.2"


[tool.poetry.group.dev.dependencies]
pytest = "^7.2.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
